<resources>
    <string name="app_name">ArtFood</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="doyouwantlogin">Do You Want to Login ?</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="click_here">Click here</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="or">Or</string>
    <string name="create_new_account">Create New Account</string>
    <string name="user_type">User type</string>
    <string name="email_address">Email Address</string>
    <string name="verify_password">Verify Password</string>
    <string name="terms_and_polices">Terms and Polices</string>
    <string name="already_have_account">Already have Account ?</string>
    <string name="create_account">Create Account</string>
    <string name="accept_all">Accept All</string>
    <string name="signup">SignUp</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="insert_your_phone_number_to_send_recovery_code">Insert your phone number to send recovery code</string>
    <string name="send_recovery_code">Send Recovery Code</string>
    <string name="insert_sent_code_to_recover_password">Insert Sent code to recover password</string>
    <string name="sms_code_here">SMS Code here</string>
    <string name="recover_now">Recover Now</string>
    <string name="new_password">New password</string>
    <string name="verify_new_password">Verify New Password</string>
    <string name="verify">Verify</string>
    <string name="code_not_sent_send_again">Code not sent ! Send again</string>
    <string name="cart">Cart</string>
    <string name="myorders">Orders</string>
    <string name="offers">Offers</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="productive_families">Productive Families</string>
    <string name="stores">Stores</string>
    <string name="store_name">Store Name</string>
    <string name="distance">Distance</string>
    <string name="_10_km">10 Km</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="_10_sar">10 SAR</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="_30_mins">30 Mins</string>
    <string name="corders">Current Orders</string>
    <string name="porders">Previous Orders</string>
    <string name="family_name">Family Name</string>
    <string name="productive_family_name">Productive Family Name</string>
    <string name="date">Date</string>
    <string name="order_status">Order Status</string>
    <string name="in_progress">In progress</string>
    <string name="total_price">Total Price</string>
    <string name="address">Address</string>
    <string name="test_address">Test address</string>
    <string name="rate_order">Rate Order</string>
    <string name="re_order">Re Order</string>
    <string name="order_details">Order Details</string>
    <string name="changeable_meal_name">Changeable Meal Name</string>
    <string name="lorem_ipsum_or_lipsum_as_it_is_sometimes_known_is_dummy_text_used_in_laying_out_print_graphic_or_web_designs_the_passage_is_attributed_to_an_unknown_typesetter_in_the_15th_century_who_is_thought_to_have_scrambled_parts_of_cicero_s_de_finibus_bonorum_et_malorum_for_use_in_a_type_specimen_book">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book</string>
    <string name="calories">Calories</string>
    <string name="ahmed_ali">Ahmed Ali</string>
    <string name="personal_info">Personal info</string>
    <string name="payment_ways">Payment Ways</string>
    <string name="invoices">Invoices</string>
    <string name="settings">Settings</string>
    <string name="register_family">Register Family</string>
    <string name="rules">Rules</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="products_and_meals">Products and meals</string>
    <string name="storedetails">Productive Family Details</string>
    <string name="meal_details">Meal Details</string>
    <string name="meal_changeable_name">Meal Changeable Name</string>
    <string name="select_count">Select Count</string>
    <string name="meal_selections">Meal Selections</string>
    <string name="red_suce">Red Suce</string>
    <string name="meal_price">Meals Price</string>
    <string name="total_with_additions">Total With Additions</string>
    <string name="add_to_shopping_cart">Add to Shopping Cart</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select">+ Select</string>
    <string name="meals_count">Meals Count</string>
    <string name="order_summary">Order Summary</string>
    <string name="price_contains_vat_15">Price contains VAT 15%</string>
    <string name="submit_purchase">Submit Purchase</string>
    <string name="select_delivery_time">Select delivery time</string>
    <string name="select_specific_time">Select specific time</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To time</string>
    <string name="select_time">Select time</string>
    <string name="payment_way">Payment Way</string>
    <string name="select_the_appropriate_payment_method">Select the appropriate payment method</string>
    <string name="pay_cash">Pay Cash</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="your_available_wallet_balance">Your available wallet balance</string>
    <string name="pay">Pay</string>
    <string name="souce_type">Souce Type</string>
    <string name="open">Open</string>
    <string name="username">Username</string>
    <string name="ordercreated">Your order has been created</string>
    <string name="orderstatusknow">To know your order status go orders</string>
    <string name="any_notes">Any Notes ?</string>
    <string name="pay_online">Pay Online</string>
    <string name="search_stores">Search Stores</string>
    <string name="search_products">Search Products</string>
    <string name="youraccounthascrated">Your Account has been Created</string>
    <string name="youwillredirect">You will redirected now to locations Page</string>
    <string name="country">Country</string>
    <string name="ksa">KSA</string>
    <string name="your_location">Your Location</string>
    <string name="select_location">Select Location</string>
    <string name="edit">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="current_balance">Current Balance</string>
    <string name="your_current_balance">Your Current Balance</string>
    <string name="_5_sar">+5 SAR</string>
    <string name="balance_charge">Balance Charge</string>
    <string name="message_text">Message Text</string>
    <string name="send">Send</string>
    <string name="operation_no_1222">Operation No #</string>
    <string name="search_locations">Search Locations</string>
    <string name="el_dammam_ksa">El Dammam , KSA</string>
    <string name="location_description">Location Description</string>
    <string name="ex_end_of_street">Ex End of street</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="call_a_representative">Call a representative</string>
    <string name="track_on_the_map">Track on the map</string>
    <string name="contact_the_administration">Contact the administration</string>
    <string name="currentorderdetails">Current Order Details</string>
    <string name="invalid_email">Invalid Email Address !</string>
    <string name="nameisreq">Name is Required</string>
    <string name="phoneisreq">Phone number is required</string>
    <string name="invalidpassword">Invalid password</string>
    <string name="passwordsnotmatches">Passwords not matches !</string>
    <string name="pleaseinsertsentcode">Please insert sent Code</string>
    <string name="aeyousurelogout">Are you sure you want logout ?</string>
    <string name="invalid_phone_num">Invalid Phone Number</string>
    <string name="accettermesreq">You Should accept terms and conditions !</string>
    <string name="selectyourprofilepic">Select your profile pic</string>
    <string name="sar">%1$s SAR</string>
    <string name="sr">SAR</string>
    <string name="delete_item">Delete Item ?</string>
    <string name="select_your_location">Select your location</string>
    <string name="add_new">Add New</string>
    <string name="nolocatons">No saved locations please add new</string>
    <string name="pleaseselectyouradress">Please select your address</string>
    <string name="areyousure">Are You Sure ?</string>
    <string name="submit">Submit</string>
    <string name="review_your_order">Review your order</string>
    <string name="leave_your_feedback">Leave your feedback ..</string>
    <string name="execute">Execute</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="recharge_amount">Recharge amount</string>
    <string name="notenghf">Your wallet amount not enough !</string>
    <string name="cartnotempty">Cart is Empty</string>
    <string name="noavaliableLocation">No available location</string>
    <string name="total_price_delivery">Total price with delivery price</string>
    <string name="shippingPrice">Shipping price</string>
    <string name="orderPrice">Order price</string>
    <string name="cannotAddOrder">It is not possible to add a request from another family, please choose the request from the same previous family</string>
    <string name="passAsVisitor">Pass as a visitor</string>
    <string name="pleaseLoginFirst">Please login first</string>
    <string name="familyIsNotAvaliableNow">Family is not available now</string>
    <string name="pleaseSelectContactType">Please select contact type</string>
    <array name="complainType">
        <item>Contact type</item>
        <item>Complain</item>
        <item>Suggestion</item>
    </array>
</resources>
