<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/enter_amount"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/amount_input"
            style="@style/txt_input_style"
            android:hint="@string/recharge_amount"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="numberDecimal"
            android:background="@drawable/strock_input"></EditText>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/execute"
            android:id="@+id/submit_btn"
            style="@style/orange_button">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</layout>