<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.art4musilm.artfoodCustomer.viewModels.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activites.account.LoginActivity">
        <include layout="@layout/loading_layout"
            app:viewModel="@{viewModel}"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="13dp">

            <include layout="@layout/custom_app_bar" android:id="@+id/toolbar"></include>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_logo"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:visibility="visible"
                android:animateLayoutChanges="true"
                android:id="@+id/password_recovery_s1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:text="@string/password_recovery">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/gray_dark"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/insert_your_phone_number_to_send_recovery_code">
                </TextView>
                <EditText
                    style="@style/txt_input_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:id="@+id/phone_input"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/ic_greycall"
                    android:hint="@string/phone_number"
                    android:textAlignment="viewStart"
                    android:inputType="phone"></EditText>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/orange_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:onClick="sendCode"
                    android:text="@string/send_recovery_code"></androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:visibility="gone"
                android:animateLayoutChanges="true"
                android:id="@+id/password_recovery_s2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:text="@string/password_recovery">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/gray_dark"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/insert_sent_code_to_recover_password">
                </TextView>
                <EditText
                    style="@style/txt_input_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/ic_code"
                    android:hint="@string/sms_code_here"
                    android:id="@+id/code"
                    android:inputType="text"></EditText>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/orange_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:onClick="recoverPassword"
                    android:text="@string/recover_now"></androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/stroke_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:onClick="sendCodeAgain"
                    android:text="@string/code_not_sent_send_again"></androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:visibility="gone"
                android:animateLayoutChanges="true"
                android:id="@+id/password_recovery_s3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"
                    android:text="@string/password_recovery">
                </TextView>
                <EditText
                    style="@style/txt_input_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textAlignment="viewStart"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/ic_key"
                    android:hint="@string/new_password"
                    android:id="@+id/new_password_input"
                    android:inputType="textPassword"></EditText>

                <EditText
                    style="@style/txt_input_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textAlignment="viewStart"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/ic_key"
                    android:hint="@string/verify_new_password"
                    android:id="@+id/verify_new_password_input"
                    android:inputType="textPassword"></EditText>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/orange_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:onClick="changePassword"
                    android:text="@string/verify"></androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>