<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.art4musilm.artfoodCustomer.viewModels.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activites.account.LoginActivity">
        <include layout="@layout/custom_app_bar" android:id="@+id/toolbar">
        </include>
        <include layout="@layout/loading_layout"
            app:viewModel="@{viewModel}"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation_from_bottom"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="13dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/ic_logo"></ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:orientation="vertical">

                    <com.weiwangcn.betterspinner.library.BetterSpinner
                        style="@style/txt_input_style"
                        android:id="@+id/customer_type_sp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:visibility="gone"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_user"
                        android:hint="@string/user_type">
                    </com.weiwangcn.betterspinner.library.BetterSpinner>

                    <EditText
                        style="@style/txt_input_style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_user_1"
                        android:hint="@string/username"
                        android:id="@+id/name_input"
                        android:inputType="text"></EditText>

                    <EditText
                        style="@style/txt_input_style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_greycall"
                        android:hint="@string/phone_number"
                        android:id="@+id/phone_input"
                        android:textAlignment="viewStart"
                        android:inputType="phone"></EditText>

                    <EditText
                        style="@style/txt_input_style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_envelope"
                        android:hint="@string/email_address"
                        android:id="@+id/email_input"
                        android:inputType="textEmailAddress"></EditText>

                    <EditText
                        style="@style/txt_input_style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_key"
                        android:hint="@string/password"
                        android:id="@+id/password_input"
                        android:textAlignment="viewStart"
                        android:inputType="textPassword"></EditText>

                    <EditText
                        style="@style/txt_input_style"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_key"
                        android:hint="@string/verify_password"
                        android:id="@+id/repassword_input"
                        android:textAlignment="viewStart"
                        android:inputType="textPassword"></EditText>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_15sdp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/accept_all"
                            android:id="@+id/terms_check"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"></CheckBox>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_and_polices"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/orange_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:onClick="signUp"
                        android:text="@string/create_account"></androidx.appcompat.widget.AppCompatButton>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_have_account"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold"></TextView>

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/stroke_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:onClick="login"
                        android:text="@string/login"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>